added pictures and finishing html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
         <a href="projects.html">Projects</a>
     </nav>
 </header>    
-    
+<section class="cta">
+    <h2>Francis Nguyen</h2>
+    <button href="projects.html">Projects</button>
+</section>
+<section class="main">
+   <div>
+    <img src='' >
+    <p>First Project</p>
+   </div>
+
+</section>
 </body>
 </html>
