Changed tile html and css and added animations

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <button href="projects.html">My Projects</button>
     </div>
 </section>
-<section id="main">
+<!-- <section id="main">
    <div class="tile">
     <div class="pic1">
 
@@ -63,6 +63,32 @@
     </div> 
     <h2>Sixth Project</h2>
    </div>
+</section> -->
+<section class="main">
+    <div class="tile">
+        <img src="../User-Interface-II/images/pic1.jpg">
+        <h2>Project 1</h2>
+    </div>
+    <div class="tile">
+        <img src="../User-Interface-II/images/pic2.jpg">
+        <h2>Project 2</h2>
+    </div>
+    <div class="tile">
+        <img src="../User-Interface-II/images/pic3.jpg">
+        <h2>Project 3</h2>
+    </div>
+    <div class="tile">
+        <img src="../User-Interface-II/images/pic4.jpg">
+        <h2>Project 4</h2>
+    </div>
+    <div class="tile">
+        <img src="../User-Interface-II/images/pic5.jpg">
+        <h2>Project 5</h2>
+    </div>
+    <div class="tile">
+        <img src="../User-Interface-II/images/pic6.jpg">
+        <h2>Project 6</h2>
+    </div>
 </section>
 <footer>
     <button href="contact.html">Contact Me</button>
